splint now tried to define a symbol based on the current processor type.
It use target_cpu from autoconf.

--- a/test/Makefile
+++ b/test/Makefile
@@ -55,8 +55,12 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
+build_alias = 
+build_triplet = i686-pc-linux-gnu
 host_alias = 
 host_triplet = i686-pc-linux-gnu
+target_alias = 
+target_triplet = i686-pc-linux-gnu
 AMTAR = ${SHELL} /net/af9/drl7x/reTmp/LCLintDev/config/missing --run tar
 AWK = gawk
 BISON = bison
