--- a/Makefile.in
+++ b/Makefile.in
@@ -55,8 +55,12 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
+build_alias = @build_alias@
+build_triplet = @build@
 host_alias = @host_alias@
 host_triplet = @host@
+target_alias = @target_alias@
+target_triplet = @target@
 AMTAR = @AMTAR@
 AWK = @AWK@
 BISON = @BISON@
@@ -95,12 +99,10 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive install-info-recursive \
 	uninstall-info-recursive all-recursive install-data-recursive \
 	install-exec-recursive installdirs-recursive install-recursive \
 	uninstall-recursive check-recursive installcheck-recursive
-
-DIST_COMMON = README install.html ./stamp-h.in Makefile.am Makefile.in acinclude.m4 \
-	aclocal.m4 config.hin config/config.guess config/config.sub \
-	config/depcomp config/install-sh config/missing \
-	config/mkinstalldirs configure configure.ac
-
+DIST_COMMON = README ./stamp-h.in ChangeLog Makefile.am Makefile.in \
+	acinclude.m4 aclocal.m4 config.hin config/config.guess \
+	config/config.sub config/depcomp config/install-sh \
+	config/missing config/mkinstalldirs configure configure.ac
 DIST_SUBDIRS = $(SUBDIRS)
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
