Fixed problem with identifyFlag revealed by splint -help flags full (reported by Jim Zelenka)
Added tests to help test to check -help flags full and -help flags
manual.

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -910,6 +910,8 @@ help:
 	-@$(SPLINTP) +boolint +boolint 
 	-@$(SPLINTP) -help flags alpha
 	-@$(SPLINTP) -help flags all
+	-@$(SPLINTP) -help flags full
+	-@$(SPLINTP) -help flags manual
 
 .PHONY: clean-local
 clean-local:
