--- a/test/Makefile
+++ b/test/Makefile
@@ -141,7 +141,7 @@ SPLINTTESTS = $(UNITTESTS) $(SUBDIRTESTS)
 
 QUICKTESTS = db3
 
-CLEANOUTPUT = $(GREP) -v "Splint 3." | $(GREP) -v "$(SPLINT)" | $(GREP) -v "^make.*\[[1-9]*\]:" | $(GREP) -v "config.status: creating test/Makefile" | $(GREP) -v "cd .. && " | $(GREP) -v "CONFIG_HEADERS=" | $(GREP) -v "CONFIG_FILES="
+CLEANOUTPUT = $(GREP) -v "Splint 3." | $(GREP) -v "$(SPLINT)" | $(GREP) -v "^make.*\[[1-9]*\]:" | $(GREP) -v "^gmake.*\[[1-9]*\]:" |   $(GREP) -v "^gmake -e" |  $(GREP) -v "^make -e" |$(GREP) -v "config.status: creating test/Makefile" | $(GREP) -v "cd .. && " | $(GREP) -v "CONFIG_HEADERS=" | $(GREP) -v "CONFIG_FILES="
 
 #drl 11/29/2001 This is a very ugly hack to get make dist to work
 EXTRA_DIST = ./abst_t.lcl ./abst_t.lcs  \
@@ -902,6 +902,7 @@ version:
 	-$(SPLINTP) -help version
 
 .PHONY: help
+
 help:
 	-@$(SPLINT)
 	-@LARCH_PATH=/dev/null; $(SPLINT) -nof empty.lcl
@@ -910,6 +911,10 @@ help:
 	-@$(SPLINTP) +boolint +boolint 
 	-@$(SPLINTP) -help flags alpha
 	-@$(SPLINTP) -help flags all
+	-@$(SPLINTP) -help flags full   | $(GREP) -v "    Path argument.  Default: " | $(GREP) -v "  lclimportdir <directory> "
+	-@$(SPLINTP) -help flags manual  | $(GREP) -v "    Path argument.  Default: " | $(GREP) -v "  lclimportdir <directory> "
+
+#larch and lclimportdir have different hardcoded default paths so don't include the path in the output..
 
 .PHONY: clean-local
 clean-local:
