--- a/bin/Makefile.in
+++ b/bin/Makefile.in
@@ -61,18 +61,29 @@ host_alias = @host_alias@
 host_triplet = @host@
 target_alias = @target_alias@
 target_triplet = @target@
+AMTAR = @AMTAR@
+AWK = @AWK@
 BISON = @BISON@
 CAT = @CAT@
 CC = @CC@
 CP = @CP@
 CPP = @CPP@
+DEPDIR = @DEPDIR@
 DIFF = @DIFF@
+EXEEXT = @EXEEXT@
 GREP = @GREP@
+INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LCLOBJ = @LCLOBJ@
 LEX = @LEX@
 LN_S = @LN_S@
 MV = @MV@
+OBJEXT = @OBJEXT@
+PACKAGE = @PACKAGE@
 RM = @RM@
+VERSION = @VERSION@
+am__include = @am__include@
+am__quote = @am__quote@
+install_sh = @install_sh@
 
 AUTOMAKE_OPTIONS = 1.5 foreign
 
