--- a/test/moreBufferTests2/Makefile
+++ b/test/moreBufferTests2/Makefile
@@ -4,4 +4,5 @@
  
 check:
 	$(SPLINT) -exportlocal +bounds unknownsize.c arrayConstExpr.c -expect 1
+	$(SPLINT) -exportlocal +bounds fixedArrayType.c -expect 1
 
