Put .c and .expect files for new test cases into the extra dist in test/Makefile.am so they'll get included in the distributions. Include index.html in release tar balls.

--- a/Makefile.am
+++ b/Makefile.am
@@ -48,7 +48,7 @@ Makefile.binary.in:Makefile.binary.am
 $(binaryDir)/Makefile.in: $(binaryDir)/Makefile.am
 	-automake $(binaryDir)/Makefile
 
-EXTRA_DIST = $(binaryfixscript) $(binaryBuiltFiles) $(binaryDerivedFiles) $(binaryDirFiles)
+EXTRA_DIST = $(binaryfixscript) $(binaryBuiltFiles) $(binaryDerivedFiles) $(binaryDirFiles) install.html
 
 preDist:  $(binaryDir)/Makefile.in  $(binaryDerivedFiles) 
 
