--- a/Makefile.in
+++ b/Makefile.in
@@ -99,7 +99,7 @@ binaryBuiltFiles = Makefile.binary.am configure.binary.ac
 #without the bleeding edge versions of automake and autoconf
 binaryDerivedFiles = Makefile.binary.in configure.binary
 
-EXTRA_DIST = $(binaryfixscript) $(binaryBuiltFiles) $(binaryDerivedFiles) $(binaryDirFiles)
+EXTRA_DIST = $(binaryfixscript) $(binaryBuiltFiles) $(binaryDerivedFiles) $(binaryDirFiles) install.html
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/config/mkinstalldirs
@@ -111,10 +111,10 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive install-info-recursive \
 	uninstall-info-recursive all-recursive install-data-recursive \
 	install-exec-recursive installdirs-recursive install-recursive \
 	uninstall-recursive check-recursive installcheck-recursive
-DIST_COMMON = README ./stamp-h.in Makefile.am Makefile.in acinclude.m4 \
-	aclocal.m4 config.hin config/config.guess config/config.sub \
-	config/depcomp config/install-sh config/missing \
-	config/mkinstalldirs configure configure.ac
+DIST_COMMON = README ./stamp-h.in ChangeLog Makefile.am Makefile.in \
+	acinclude.m4 aclocal.m4 config.hin config/config.guess \
+	config/config.sub config/depcomp config/install-sh \
+	config/missing config/mkinstalldirs configure configure.ac
 DIST_SUBDIRS = $(SUBDIRS)
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
