--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -5,6 +5,6 @@ AUTOMAKE_OPTIONS = 1.5 foreign
 #this is just a hack to get make dist to work.
 
 ## Include them in the distribution
-EXTRA_DIST = splint.1
+EXTRA_DIST = splint.1 freebsd.html linux.html sunos.html
 
 all:
